Version 1.3.14+svn:
 * language and i18n:
   * updated translations: Dutch, Spanish

Version 1.3.14:
 * campaigns:
   * The Hammer of Thursagan:
     * 'Invaders' if there weren't enough free tiles to spawn all indigs the 
       game would enter an infinite loop (bug #10621)
   * Two Brothers:
     * updated the music playlists in all scenarios to include the new music
   * Under the Burning Suns:
     * Completely new scenario 3
     * Few bugfixes to scenario 6
 * graphics:
   * overlays are properly drawn at the top row (eg forrest) (bug #10238)
   * mountains no longer have a hill as base
   * when a leader dies the villages, which are no longer are owned, are
     properly redrawn (bug #9136)
   * sometimes the first hitpoints left percentage and the unscatched had a 
     difference of 0.1%, this has been fixed (bug #9122)
 * language and i18n:
   * updated translations: Chinese, Danish, Finnish, French, German, Italian,
     Lithuanian, Slovak, Spanish
   * added gkai00mp.ttf font (needed for the Chinese translation)
 * multiplayer:
   * revised maps: Den of Onis, Weldyn Channel
   * renaming a unit no longer generates an OOS error (bug #7864)
   * if in a MP campaign the endlevel was continue(_no_save) it could happen
     that the client left before the host uploaded the new scenarion, this 
     has been fixed
   * when joining a MP game the recall list wasn't loaded which leads to
     OOS errors in campaigns (bug #10624)
   * :droid can now use the additional parameters on & off to enable/disable
     the AI status of a side instead of toggle it (FR #9676)
   * fixed the MP campaign gold carry over (bug #10677)
   * MP campaign start of scenario saves can be loaded again (bug #10058)
   * if a MP side has no colour defined fall back to the default side colour
 * sound:
   * timer bell in MP starts when there are 20 seconds left and fades in
     gradually for 10 seconds (fr #10559)
   * fixed timer bell not always playing (bug #10559)