@@ -1,6 +1,9 @@
 Version 1.3.14+svn:
  * language and i18n:
    * updated translations: Dutch, Spanish
+ * miscellaneous and bug fixes:
+   * Fixed :control comamnd to work
+   * Fixed boost test compile with 1.34.1 
 
 Version 1.3.14:
  * campaigns:
